fix(plugins/plugin-client-common): wizard header minimize can result in cropped text

--- a/plugins/plugin-client-common/web/scss/components/Terminal/Commentary.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/Commentary.scss
@@ -376,8 +376,9 @@ body[kui-theme-style='light'] {
     }
 
     @include MarkdownMajorParagraph {
-      margin-top: 1.5em;
-      margin-bottom: 1.5em;
+      --kui--markdown-major-paragraph-margin: 1.5em;
+      margin-top: var(--kui--markdown-major-paragraph-margin);
+      margin-bottom: var(--kui--markdown-major-paragraph-margin);
 
       &:first-child {
         margin-top: 0;
